[package]
name = "rs4lapce"
version = "0.1.0"
authors = ["HTGAzureX1212."]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/TeamHarTex/rs4lapce"

[dependencies]
anyhow = "1.0.79"
lapce-plugin = "0.1.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
